// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`STY-010: Finance Context Split - 70+ Comprehensive Tests > Phase 1: Snapshot Tests > AccountsContext snapshot 1`] = `
{
  "accounts": [],
  "addAccount": [Function],
  "addCategory": [Function],
  "categories": [
    {
      "color": "#0088FE",
      "group": "FIXED",
      "icon": "🏠",
      "id": "cat_1",
      "name": "Moradia",
    },
    {
      "color": "#00C49F",
      "group": "FIXED",
      "icon": "🚗",
      "id": "cat_2",
      "name": "Transporte",
    },
    {
      "color": "#FF4d4d",
      "group": "FIXED",
      "icon": "🏥",
      "id": "cat_3",
      "name": "Saúde",
    },
    {
      "color": "#8884d8",
      "group": "FIXED",
      "icon": "🎓",
      "id": "cat_4",
      "name": "Educação",
    },
    {
      "color": "#FFbb28",
      "group": "VARIABLE",
      "icon": "🛒",
      "id": "cat_5",
      "name": "Alimentação / Mercado",
    },
    {
      "color": "#FF8042",
      "group": "VARIABLE",
      "icon": "🎉",
      "id": "cat_6",
      "name": "Lazer",
    },
    {
      "color": "#d97706",
      "group": "VARIABLE",
      "icon": "🍔",
      "id": "cat_7",
      "name": "Restaurante / Delivery",
    },
    {
      "color": "#db2777",
      "group": "VARIABLE",
      "icon": "🛍️",
      "id": "cat_8",
      "name": "Compras",
    },
    {
      "color": "#4f46e5",
      "group": "INVESTMENT",
      "icon": "📈",
      "id": "cat_9",
      "name": "Aporte Mensal",
    },
    {
      "color": "#059669",
      "group": "INVESTMENT",
      "icon": "🛡️",
      "id": "cat_10",
      "name": "Reserva de Emergência",
    },
    {
      "color": "#6366f1",
      "group": "INVESTMENT",
      "icon": "☂️",
      "id": "cat_11",
      "name": "Seguros",
    },
    {
      "color": "#4caf50",
      "group": "INCOME",
      "icon": "💰",
      "id": "cat_12",
      "name": "Salário",
    },
    {
      "color": "#84cc16",
      "group": "INCOME",
      "icon": "💵",
      "id": "cat_13",
      "name": "Outras Rendas",
    },
  ],
  "deleteAccount": [Function],
  "deleteCategory": [Function],
  "getAccountBalance": [Function],
  "getDeletedAccounts": [Function],
  "recoverAccount": [Function],
  "totalBalance": 0,
  "updateAccount": [Function],
  "updateCategory": [Function],
}
`;

exports[`STY-010: Finance Context Split - 70+ Comprehensive Tests > Phase 1: Snapshot Tests > All contexts maintain valid snapshots after operations 1`] = `
{
  "addManyTransactions": [Function],
  "addTransaction": [Function],
  "categoryBudgets": [],
  "deleteTransaction": [Function],
  "deleteTransactionGroup": [Function],
  "deleteTransactionGroupFromIndex": [Function],
  "deleteTransactions": [Function],
  "getDeletedTransactions": [Function],
  "getTransactionsByGroupId": [Function],
  "recoverTransaction": [Function],
  "transactions": [
    {
      "accountId": "test",
      "categoryId": "cat",
      "date": "2026-03-06T18:13:47.958Z",
      "description": "Test",
      "id": "q6u1eje",
      "type": "INCOME",
      "value": 100,
    },
  ],
  "updateCategoryBudget": [Function],
  "updateTransaction": [Function],
  "updateTransactions": [Function],
}
`;

exports[`STY-010: Finance Context Split - 70+ Comprehensive Tests > Phase 1: Snapshot Tests > GoalsContext snapshot 1`] = `
{
  "addGoal": [Function],
  "deleteGoal": [Function],
  "getDeletedGoals": [Function],
  "goals": [],
  "recoverGoal": [Function],
  "updateGoal": [Function],
}
`;

exports[`STY-010: Finance Context Split - 70+ Comprehensive Tests > Phase 1: Snapshot Tests > InvestmentsContext snapshot 1`] = `
{
  "addInvestment": [Function],
  "deleteInvestment": [Function],
  "getDeletedInvestments": [Function],
  "investments": [],
  "recoverInvestment": [Function],
  "updateInvestment": [Function],
}
`;

exports[`STY-010: Finance Context Split - 70+ Comprehensive Tests > Phase 1: Snapshot Tests > PatrimonyContext snapshot 1`] = `
{
  "addPatrimonyItem": [Function],
  "deletePatrimonyItem": [Function],
  "getDeletedPatrimonyItems": [Function],
  "patrimonyItems": [],
  "recoverPatrimonyItem": [Function],
  "updatePatrimonyItem": [Function],
}
`;

exports[`STY-010: Finance Context Split - 70+ Comprehensive Tests > Phase 1: Snapshot Tests > TransactionsContext snapshot 1`] = `
{
  "addManyTransactions": [Function],
  "addTransaction": [Function],
  "categoryBudgets": [],
  "deleteTransaction": [Function],
  "deleteTransactionGroup": [Function],
  "deleteTransactionGroupFromIndex": [Function],
  "deleteTransactions": [Function],
  "getDeletedTransactions": [Function],
  "getTransactionsByGroupId": [Function],
  "recoverTransaction": [Function],
  "transactions": [],
  "updateCategoryBudget": [Function],
  "updateTransaction": [Function],
  "updateTransactions": [Function],
}
`;

exports[`Split Finance Contexts - Snapshot Tests > AccountsContextType > should have correct shape for AccountsContext 1`] = `
[
  "accounts",
  "categories",
  "addAccount",
  "updateAccount",
  "deleteAccount",
  "addCategory",
  "updateCategory",
  "deleteCategory",
  "getAccountBalance",
  "totalBalance",
  "recoverAccount",
  "getDeletedAccounts",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > GoalsContextType > should have correct shape for GoalsContext 1`] = `
[
  "goals",
  "addGoal",
  "updateGoal",
  "deleteGoal",
  "recoverGoal",
  "getDeletedGoals",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > InvestmentsContextType > should have correct shape for InvestmentsContext 1`] = `
[
  "investments",
  "addInvestment",
  "updateInvestment",
  "deleteInvestment",
  "recoverInvestment",
  "getDeletedInvestments",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > PatrimonyContextType > should have correct shape for PatrimonyContext 1`] = `
[
  "patrimonyItems",
  "addPatrimonyItem",
  "updatePatrimonyItem",
  "deletePatrimonyItem",
  "recoverPatrimonyItem",
  "getDeletedPatrimonyItems",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > Soft Delete Architecture > should support querying deleted items across all contexts 1`] = `
[
  "getDeletedTransactions",
  "getDeletedAccounts",
  "getDeletedGoals",
  "getDeletedInvestments",
  "getDeletedPatrimonyItems",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > Soft Delete Architecture > should support soft delete recovery across all contexts 1`] = `
[
  "recoverTransaction",
  "recoverAccount",
  "recoverGoal",
  "recoverInvestment",
  "recoverPatrimonyItem",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > TransactionsContextType > should have correct shape for TransactionsContext 1`] = `
[
  "transactions",
  "categoryBudgets",
  "addTransaction",
  "addManyTransactions",
  "updateTransaction",
  "deleteTransaction",
  "deleteTransactions",
  "updateTransactions",
  "getTransactionsByGroupId",
  "deleteTransactionGroup",
  "deleteTransactionGroupFromIndex",
  "updateCategoryBudget",
  "recoverTransaction",
  "getDeletedTransactions",
]
`;

exports[`Split Finance Contexts - Snapshot Tests > localStorage Key Strategy > should have separate localStorage keys per context 1`] = `
[
  "visao360_v2_data_",
  "visao360_v2_accounts_",
  "visao360_v2_transactions_",
  "visao360_v2_goals_",
  "visao360_v2_investments_",
  "visao360_v2_patrimony_",
]
`;
